--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <img src="asset/offer/1.jpg" alt="trucks">
                         <div class="card-body">
                             <h4 class="text-center p-3">Apartamenty</h4>
-                            <p>Luksusowe aparamenty na wynajem</p>
+                            <p>Luksusowe aparamenty z pełnym wyposażeniem i mini barem.</p>
                         </div>
                     </div>
                 </div>
@@ -74,7 +74,7 @@
                         <img src="asset/offer/2.jpg" alt="trucks">
                         <div class="card-body">
                             <h4 class="text-center p-3">Pokoje</h4>
-                            <p>Pokoje do wynajęcia</p>
+                            <p>Pokoje do wynajęcia.</p>
                         </div>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                         <img src="asset/offer/3.jpg" alt="trucks">
                         <div class="card-body">
                             <h4 class="text-center p-3">Sale konferencyjne</h4>
-                            <p>Sala konferencyjna</p>
+                            <p>W pełni wyposażone sale konferencyjne dla klientów biznesowych.</p>
                         </div>
                     </div>
                 </div>
@@ -106,7 +106,7 @@
                     </div>
                     <h5 class="font-weight-bold mt-3 mb-3 text-center text-light">Basen</h5>
                     <p class="text-light">
-                        Basen jak basen, pełen wody :)
+                        Basen hotelowy pozwoli się Państwu zrelaksować. 
                     </p>
                 </div>
                 <div class="col-3 m-3">
