Adding footer and other small changes in the file

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>Hello, world!</title>
+    <title>le Grand Hotel</title>
 </head>
 
 <body>
@@ -106,7 +108,7 @@
                     </div>
                     <h5 class="font-weight-bold mt-3 mb-3 text-center text-light">Basen</h5>
                     <p class="text-light">
-                        Basen hotelowy pozwoli się Państwu zrelaksować. 
+                        Basen hotelowy pozwoli się Państwu zrelaksować.
                     </p>
                 </div>
                 <div class="col-3 m-3">
@@ -115,7 +117,7 @@
                     </div>
                     <h5 class="font-weight-bold mt-3 mb-3 text-center text-light">Kręgle</h5>
                     <p class="text-light">
-                        W naszym hotelu znajdą Państwo 3 tory do gry w kręgle. 
+                        W naszym hotelu znajdą Państwo 3 tory do gry w kręgle.
                     </p>
                 </div>
                 <div class="col-3 m-3">
@@ -131,8 +133,38 @@
         </div>
     </section>
     <!--rozrywka-->
+    <!-- footer -->
+    <footer class="page-footer font-small pt-3">
+        <div class="container">
+            <div class="row p-4 d-flex justify-content-between">
+                <div class="col-3">
+                    <h5 class="font-weight-bold">le Grand Hotel</h5>
+                    <p>
+                        Hotel cieszący się renomą na polskim rynku już od ponad 20 lat.
+                    </p>
+                </div>
+                <div class="col-4">
+                    <p>
+                        <i class="fa fa-phone pr-4" style="font-size:24px"></i> +48123456789
+                    </p>
+                    <p>
+                        <i class="fa fa-envelope-o pr-4" style="font-size:24px"></i> hotel@hotel.pl
+                    </p>
+                    <p>
+                        <i class="fa fa-home pr-4" style="font-size:24px"></i> Ul. Polna 44, 81-111 Warszawa
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <h6 class="text-center">Copyright: UX designers XYZ</h6>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- footer -->
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -141,7 +173,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
 </body>
 
 </html>
