--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Informacje</a>
+                    <a class="nav-link" onclick="smoothScroll('#offer')">Oferta</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Oferta</a>
+                    <a class="nav-link" onclick="smoothScroll('#fun')">Rozrywka</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Kontakt</a>
+                    <a class="nav-link" onclick="smoothScroll('footer')">Kontakt</a>
                 </li>
             </ul>
         </div>
@@ -54,7 +54,7 @@
     </header>
     <!--header-->
     <!--oferta-->
-    <section id="trucks">
+    <section id="offer">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -94,7 +94,7 @@
     </section>
     <!--oferta-->
     <!--rozrywka-->
-    <section id="rozrywka">
+    <section id="fun">
         <div class="container-fluid bg-dark">
             <div class="row">
                 <div class="col-12 p-4">
@@ -164,7 +164,7 @@
     </footer>
     <!-- footer -->
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS 
+    <!-- jQuery first, then Popper.js, then Bootstrap JS  -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -173,7 +173,8 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        crossorigin="anonymous"></script> -->
+        crossorigin="anonymous"></script>
+        <script src="js/myScript.js"></script>
 </body>
 
 </html>
