--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </header>
     <!--header-->
     <!--oferta-->
-    <section id="offer">
+    <section id="trucks">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -64,7 +64,7 @@
             <div class="row d-flex justify-content-center p-4">
                 <div class="col-4">
                     <div class="card">
-                        <img src="asset/offer/1.jpg" alt="trucks">
+                        <img src="asset/offer/1.jpg" alt="offer">
                         <div class="card-body">
                             <h4 class="text-center p-3">Apartamenty</h4>
                             <p>Luksusowe aparamenty z pełnym wyposażeniem i mini barem.</p>
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-4">
                     <div class="card">
-                        <img src="asset/offer/2.jpg" alt="trucks">
+                        <img src="asset/offer/2.jpg" alt="offer">
                         <div class="card-body">
                             <h4 class="text-center p-3">Pokoje</h4>
                             <p>Pokoje do wynajęcia.</p>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="col-4">
                     <div class="card">
-                        <img src="asset/offer/3.jpg" alt="trucks">
+                        <img src="asset/offer/3.jpg" alt="offer">
                         <div class="card-body">
                             <h4 class="text-center p-3">Sale konferencyjne</h4>
                             <p>W pełni wyposażone sale konferencyjne dla klientów biznesowych.</p>
