--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>le Grand Hotel</title>
+    <title>Hotel Bukowscy</title>
 </head>
 
 <body>
@@ -54,7 +54,7 @@
     </header>
     <!--header-->
     <!--oferta-->
-    <section id="trucks">
+    <section id="offer">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -138,7 +138,7 @@
         <div class="container">
             <div class="row p-4 d-flex justify-content-between">
                 <div class="col-3">
-                    <h5 class="font-weight-bold">le Grand Hotel</h5>
+                    <h5 class="font-weight-bold">Hotel Bukowscy</h5>
                     <p>
                         Hotel cieszący się renomą na polskim rynku już od ponad 20 lat.
                     </p>
