--- a/admin/login.html
+++ b/admin/login.html
@@ -17,16 +17,16 @@
     <form action="" class="form-signin mt-5" method="POST">
         <h1 class="font-weight-bold m-4 text-center">Panel administracyjny</h1>
 
-        <div class="col-12 d-flex justify-content-center">
+        <div class="col-12 d-flex justify-content-center mt-5">
             <label for="login" class="sr-only">Login</label>
-            <input type="text" name="login" id="login" placeholder="Login" class="col-2 m-2 form-control">
+            <input type="text" name="login" id="login" placeholder="Login" class="col-lg-2 col-md-8 col-sm-12 m-2 form-control">
         </div>
         <div class="col-12 d-flex justify-content-center">
             <label for="Password" class="sr-only">Password</label>
-            <input type="password" name="password" id="password" placeholder="Password" class="col-2 m-2 form-control">
+            <input type="password" name="password" id="password" placeholder="Password" class="col-lg-2 col-md-8 col-sm 12 m-2 form-control">
         </div>
         <div class="col-12 d-flex justify-content-center">
-            <input type="submit" value="Zaloguj" class="btn btn-primary m-2">
+            <input type="submit" value="Zaloguj" class="btn btn-primary col-lg-2 col-md-8 col-sm-12 m-2">
         </div>
     </form>
 
