Adding enctype for sending files to admin panel

--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -81,10 +81,10 @@
                         </tr>
                     </tbody>
                 </table>
-                <form action="" method="POST" class="text-white d-flex justify-content-between align-items-center">
+                <form action="" enctype="multipart/form-data" method="POST" class="text-white d-flex justify-content-between align-items-center">
                     <div class="forms">
                         <p>Nazwa: <input type="text" name="room" id="room" placeholder="Nazwa" required></p>
-                        <p>Zdjęcie: <input type="file" name="photo" id="photo" required></p>
+                        <p>Zdjęcie: <input type="file" name="photo_room" id="photo_room" required></p>
                         <div class="mt-3">
                             Pokoje: <select name="pokoj" id="pokoj">
                                 <option value="" disabled>Pokój</option>
@@ -124,10 +124,10 @@
                         </tr>
                     </tbody>
                 </table>
-                <form action="" method="POST" class="text-white d-flex justify-content-between align-items-center">
+                <form action="" enctype="multipart/form-data" method="POST" class="text-white d-flex justify-content-between align-items-center">
                     <div class="forms">
-                        <p>Nazwa: <input type="text" name="room" id="room" placeholder="Nazwa" required></p>
-                        <p>Zdjęcie: <input type="file" name="photo" id="photo" required></p>
+                        <p>Nazwa: <input type="text" name="apartment" id="apartment" placeholder="Nazwa" required></p>
+                        <p>Zdjęcie: <input type="file" name="photo_apartment" id="photo_apartment" required></p>
                         <div class="mt-3">
                             Pokoje: <select name="pokoj" id="pokoj">
                                 <option value="" disabled>Apartament</option>
