--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <body>
     <!--navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light" >
-        <a class="navbar-brand" href="#">Hotel</a>
+        <!-- <a class="navbar-brand" href="/inz/index.html">Hotel</a> -->
+        <a class="navbar-brand" href="/inz/index.html"><img src="logos/logo.png" alt="offer"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
