--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <!--navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" >
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <!-- <a class="navbar-brand" href="/inz/index.html">Hotel</a> -->
         <a class="navbar-brand" href="/inz/index.html"><img src="logos/logo.png" alt="offer"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -134,6 +134,32 @@
         </div>
     </section>
     <!--rozrywka-->
+    <!--map-->
+    <section id="map">
+        <div class="container">
+                <script
+                    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5MdKOcpFPugM4GywR4YYBwZihNU-Dbd0&callback=initMap&libraries=&v=weekly"
+                    defer></script>
+                <script>
+                    // Initialize and add the map
+                    function initMap() {
+                        // The location of Uluru
+                        const uluru = { lat: 54.57092, lng: 18.38802 };
+                        // The map, centered at Uluru
+                        const map = new google.maps.Map(document.getElementById("map"), {
+                            zoom: 10,
+                            center: uluru,
+                        });
+                        // The marker, positioned at Uluru
+                        const marker = new google.maps.Marker({
+                            position: uluru,
+                            map: map,
+                        });
+                    }
+                </script>
+        </div>
+    </section>
+    <!--map-->
     <!-- footer -->
     <footer class="page-footer font-small pt-3">
         <div class="container">
@@ -175,7 +201,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
-        <script src="js/myScript.js"></script>
+    <script src="js/myScript.js"></script>
 </body>
 
 </html>
