--- a/admin/login.html
+++ b/admin/login.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <form action="" class="form-signin mt-5" method="POST">
+    <form action="login.php" class="form-signin mt-5" method="POST">
         <h1 class="font-weight-bold m-4 text-center">Panel administracyjny</h1>
 
         <div class="col-12 d-flex justify-content-center mt-5">
