--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -87,10 +87,10 @@
                 </table>
                 <form action="pokoje.php" enctype="multipart/form-data" method="POST" class="text-white d-flex justify-content-between align-items-center">
                     <div class="forms">
-                        <p>Nazwa: <input type="text" name="room" id="room" placeholder="Nazwa" required></p>
+                        <p>Nazwa: <input type="text" name="name" id="room" placeholder="Nazwa" required></p>
                         <p>Zdjęcie: <input type="file" name="photo_room" id="photo_room" required></p>
                         <div class="mt-3">
-                            Pokoje: <select name="pokoj" id="pokoj">
+                            Pokoje: <select name="type" id="pokoj">
                                 <option value="" disabled>Pokój</option>
                                 <option value="dwuosobowy">dwuosobowy</option>
                                 <option value="jednoosobowy">jednoosobowy</option>
