--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
             <div class="row d-flex justify-content-center p-4">
                 <div class="col-lg-4">
-                    <a class="card-link" href="/inz/index.html">
+                    <a class="card-link" href="admin/search.php?type=apartments">
                         <div class="card">
                             <img src="asset/offer/1.jpg" alt="offer">
                             <div class="card-body">
