improvements for landingpage

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </a>
             </div>
             <div class="col-lg-4">
-                <a class="card-link" href="/inz/index.html">
+                <a class="card-link" href="admin/search.php?type=rooms">
                     <div class="card">
                         <img src="asset/offer/2.jpg" alt="offer">
                         <div class="card-body">
@@ -86,7 +86,7 @@
                 </a>
             </div>
             <div class="col-lg-4">
-                <a class="card-link" href="/inz/index.html">
+                <a class="card-link" href="admin/search.php?type=conference-rooms">
                     <div class="card">
                         <img src="asset/offer/3.jpg" alt="offer">
                         <div class="card-body">
