Change hotel name and adding required value for adding files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>Hotel Bukowscy</title>
+    <title>HOTEL XYZ</title>
 </head>
 
 <body>
@@ -213,7 +213,7 @@
                 const rumia = { lat: 54.57092, lng: 18.38802 };
                 // The map, centered at Rumia
                 const map = new google.maps.Map(document.getElementById("map"), {
-                    zoom: 10,
+                    zoom: 15,
                     center: rumia,
                 });
                 // The marker, positioned at Rumia
@@ -231,7 +231,7 @@
     <div class="container">
         <div class="row p-4 d-flex justify-content-between">
             <div class="col-lg-3">
-                <h5 class="font-weight-bold">Hotel Bukowscy</h5>
+                <h5 class="font-weight-bold">HOTEL XYZ</h5>
                 <p>
                     Hotel cieszący się renomą na polskim rynku już od ponad 20 lat.
                 </p>
